spl2/hn_tests/failing/rwa1.hni
Continue = ?a -> Either<?a ?b>
void = voidT
_if = bool ?a ?a -> ?a
eq = ?a ?a -> bool
head = string -> char
tail = string -> string
Break = ?b -> Either<?a ?b>
foldTailUntil = (string ?s -> Either<?s ?r>) ?s string -> ?r
fold = (?a ?s -> ?s) string list<?a> -> ?s
range = num num -> list<num>
at = num string -> char
sum = num num -> num
foldUntil = (char ?s -> Either<?s ?r>) ?s string -> ?r
Pair = ?a ?b -> pair<?a ?b>
fst = pair<?a ?b> -> ?a
snd = pair<?a ?b> -> ?b
ForEachLine = string -> list<string>
fold2 = (?a ?s -> ?s) ?s list<?a> -> ?s
map = (?a -> ?b) list<?a> -> list<?b>
cons = ?a list<?a> -> list<?a>
nil = list<?a>
addToBuf = buf list<char> -> pair<buf list<char>>
addToArr = arr list<char> -> arr
CKeywordFilterOld = pair<buf arr> -> CKeywordFilterOld
allocateBuf = num -> buf
allocateArr = num -> arr